<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	 <!-- Main application -->
    <string name="app_name">UniStats</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- General -->
    <string name="label_name">Name</string>
    <string name="label_date">Date</string>
    <string name="label_distance">Distance</string>
    <string name="label_pedals">Pedals</string>
    <string name="label_details">Details</string>
    <string name="label_accuracy">Accuracy</string>
    <string name="error_no_name">You must specify a name.</string>
    
    <!-- Rides List -->
    <string name="title_activity_rides">Rides</string>
    <string name="list_no_rides">No Rides</string>
    
    <!-- Ride Detail Form -->
    <string name="title_activity_new_ride">New Ride</string>
    <string name="title_activity_edit_ride">Edit Ride</string>
    <string name="hint_ride_name">Name</string>
    <string name="custom_date">Set different date</string>
    <string name="hint_ride_month">Month</string>
    <string name="hint_ride_day">Day</string>
    <string name="hint_ride_year">Year</string>
    <string name="record_distance">Record distance</string>
    <string name="use_GPS">Use GPS</string>
    <string name="record_pedal_count">Record pedal count</string>
    <string name="button_set_goal">Set a goal</string>
    <string name="button_save_ride">Save</string>
    <string name="button_save_start_ride">Save and start ride</string>
    <string name="no_stat_selected">You must select a statistic.</string>
    <string name="gps_not_enabled">GPS must be enabled to use it.</string>
    <string name="ride_created_successfully">Ride created</string>
    <string name="error_creating_ride">Error creating ride</string>
    <string name="ride_updated_successfully">Ride updated</string>
    <string name="error_updating_ride">Error saving ride</string>
    
    <!-- Goals List -->
    <string name="title_activity_goals">Goals</string>
    <string name="list_no_goals">No Goals</string>
    <string name="by">by</string>
    
    <!-- Goal Detail Form -->
    <string name="title_activity_new_goal">New Goal</string>
    <string name="title_activity_edit_goal">Edit Goal</string>
    <string name="hint_goal_name">Name</string>
    <string name="label_select_goal_params">Set a goal for…</string>
    <string name="distance_goal">Distance:</string>
    <string name="pedals_goal">Pedals:</string>
    <string name="label_select_goal_date">Accomplish by…</string>
    <string name="no_goal_date">Any date</string>
    <string name="set_date">Set date</string>
    <string name="button_save_goal">Save</string>
    <string name="no_goal_set">You must specify a goal.</string>
    <string name="invalid_distance">Invalid distance.</string>
    <string name="invalid_pedals">Invalid number of pedals.</string>
    <string name="goal_created_successfully">Goal created</string>
    <string name="error_creating_goal">Error creating goal</string>
    <string name="goal_updated_successfully">Goal updated</string>
    <string name="error_updating_goal">Error saving goal</string>
    
    <!-- Tracking -->
    <string name="title_activity_tracking_stats">Tracking…</string>
    <string name="title_activity_tracking_stats_paused">Paused</string>
    <string name="label_distance_recorded">Distance:</string>
    <string name="label_distance_accuracy">Accuracy:</string>
    <string name="label_pedals_recorded">Pedals:</string>
    
    <!-- Achievement Unlocked -->
    <string name="title_activity_achievement_unlocked">Congratulations!</string>
    <string name="label_achievement_info">You successfully</string>
    <string name="label_share_achievement">Share On:</string>
    <string name="or">OR</string>
    <string name="button_share_other">Share other ways</string>
    <string name="copied_to_clipboard">Achievement copied to clipboard</string>
    <string name="on_a_unicycle">on a unicycle</string>
    <string name="open_with">Open with…</string>
    <string name="uri_google_plus">https://plus.google.com/</string>
    <string name="uri_facebook">https://www.facebook.com/</string>
    <string name="uri_twitter">https://www.twitter.com/home</string>
    <string name="uri_twitter_direct_url">https://twitter.com/intent/tweet?source=webclient&amp;text=</string>
    <string name="uri_tumblr">https://www.tumblr.com/</string>
    
    <!-- Notifications -->
    <string name="notification_achievement_get">Congratulations!</string>
    <string name="notification_goal_distance">You\'ve ridden more than</string>
    <string name="notification_goal_pedals">You\'ve pedaled more than</string>
    
    <!-- Menus -->
    <string name="menu_rides_title">Rides</string>
    <string name="menu_new_ride_title">New Ride</string>
    <string name="menu_goals_title">Goals</string>
    <string name="menu_new_goal_title">New Goal</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Logging -->
    <string name="exception_setting_date">Exception while setting date in pressDateButton</string>

</resources>