<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newRideScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

   <LinearLayout
        android:id="@+id/newRideLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <EditText
            android:id="@+id/enterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ride_name"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp" />

        <LinearLayout
            android:id="@+id/dateRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/enterMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_ride_month"
                android:inputType="number" />

            <EditText
                android:id="@+id/enterDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_ride_day"
                android:inputType="number" />

            <EditText
                android:id="@+id/enterYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_ride_year"
                android:inputType="number" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkboxDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_distance" />

        <CheckBox
            android:id="@+id/checkboxGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
			android:checked="false"
			android:focusable="false"
			android:enabled="false"
            android:clickable="false"
            android:text="@string/use_GPS" />

        <CheckBox
            android:id="@+id/checkboxPedalCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_pedal_count" />

        <Button
            android:id="@+id/buttonCreateAchievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_set_goal" />

        <Button
            android:id="@+id/ButtonSaveRide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_ride" />
    </LinearLayout>

</ScrollView>