<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/goalDetailScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    
	    <EditText
	        android:id="@+id/enterGoalName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_goal_name" />
	    
	    <TextView
	        android:id="@+id/labelSelectGoalParams"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/enterGoalName"
	        android:padding="5dip"
	        android:text="@string/label_select_goal_params"
	        android:textSize="20sp" />
	    
	    <CheckBox
	        android:id="@+id/checkboxGoalDistance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/labelSelectGoalParams"
	        android:paddingRight="5dip"
	        android:text="@string/distance_goal" />
	    
	    <EditText
	        android:id="@+id/enterGoalDistance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/checkboxGoalDistance"
	        android:layout_alignParentLeft="false"
	        android:layout_toRightOf="@id/checkboxGoalDistance"
	        android:ems="10"
	        android:enabled="false"
	        android:inputType="number" />
	    
	    <CheckBox
	        android:id="@+id/checkboxGoalPedals"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/checkboxGoalDistance"
	        android:paddingRight="5dip"
	        android:text="@string/pedals_goal" />
	    
	    <EditText
	        android:id="@+id/enterGoalPedals"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/checkboxGoalPedals"
	        android:layout_alignLeft="@+id/enterGoalDistance"
	        android:layout_alignParentRight="true"
	        android:ems="10"
	        android:enabled="false"
	        android:focusable="false"
	        android:inputType="number" />
	    
	    <TextView
	        android:id="@+id/labelSelectGoalDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/checkboxGoalPedals"
	        android:padding="5dip"
	        android:text="@string/label_select_goal_date"
	        android:textSize="20sp" />
	    
	    <CheckBox
	        android:id="@+id/checkboxAnyDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/labelSelectGoalDate"
	        android:checked="true"
	        android:text="@string/no_goal_date" />
	    
	    <LinearLayout
	        android:id="@+id/goalDateRow"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/checkboxAnyDate" >

            <EditText
                android:id="@+id/enterGoalMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_ride_month"
                android:inputType="none"
                android:longClickable="false" />

            <EditText
                android:id="@+id/enterGoalDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_ride_day"
                android:inputType="none"
                android:longClickable="false" />

            <EditText
                android:id="@+id/enterGoalYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_ride_year"
                android:inputType="none"
                android:longClickable="false" />

        </LinearLayout>
        
        <Button
            android:id="@+id/buttonSetGoalDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/goalDateRow"
            android:enabled="false"
            android:focusable="false"
            android:text="@string/set_date" />
	    
	    <Button
	        android:id="@+id/buttonSaveGoal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/buttonSetGoalDate"
	        android:layout_marginTop="15dip"
	        android:text="@string/button_save_goal" />

	</RelativeLayout>
</ScrollView>