<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView
        android:id="@+id/rideNameArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/rideStatsArea"
        android:ellipsize="end"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip"
        android:text="@string/label_name"
        android:textSize="22sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/rideDateArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rideNameArea"
        android:layout_toLeftOf="@+id/rideStatsArea"
        android:padding="5dip"
        android:text="@string/label_date"
        android:textSize="15sp" />
    
    <LinearLayout
        android:id="@+id/rideStatsArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rideDateArea"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/rideDistanceArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="5dip"
            android:text="@string/label_distance"
            android:textSize="15sp" />
	    
	    <TextView
	        android:id="@+id/ridePedalsArea"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:padding="5dip"
	        android:text="@string/label_pedals"
	        android:textSize="15sp" />
        
    </LinearLayout>
         
    
    
</RelativeLayout>